--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@uirouter/angular": "^1.0.0-beta.6",
     "@uirouter/core": "^5.0.4",
     "angular2-highcharts": "^0.5.5",
+    "angular2-moment": "^1.3.3",
     "core-js": "^2.4.1",
     "highcharts": "^5.0.12",
+    "moment": "^2.18.1",
     "ngx-restangular": "^1.0.11",
     "querystringify": "^1.0.0",
     "rxjs": "^5.1.0",
@@ -46,6 +48,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "node-sass": "^4.5.3",
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
