--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@uirouter/core": "^5.0.4",
     "angular2-highcharts": "^0.5.5",
     "angular2-moment": "^1.3.3",
+    "angularfire2": "^4.0.0-rc.1",
     "core-js": "^2.4.1",
+    "firebase": "^4.1.2",
     "highcharts": "^5.0.12",
     "moment": "^2.18.1",
     "ngx-restangular": "^1.0.11",
