--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ngx-translate/core": "^7.0.0",
     "@uirouter/angular": "^1.0.0-beta.6",
     "@uirouter/core": "^5.0.4",
     "angular2-highcharts": "^0.5.5",
