--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "core-js": "^2.4.1",
     "firebase": "^4.1.2",
     "highcharts": "^5.0.12",
+    "json-typescript-mapper": "^1.1.3",
     "moment": "^2.18.1",
     "ngx-restangular": "^1.0.11",
     "querystringify": "^1.0.0",
